--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
-  },
+    "noImplicitAny": false  },
   "exclude": [
     "node_modules",
     "typings/main",
